--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@ body {
   .container {
     width: 100%;
     max-width: 1200px;
-    margin: 0;
+    margin: 0 auto;
   }
   
   /* Navigation Bar */
@@ -56,7 +56,7 @@ body {
   .hero {
     background: linear-gradient(to bottom, rgba(0, 33, 71, 0.8), rgba(0, 33, 71, 0.5)),
                 url("../assets/images/landingpage.jpg") no-repeat center center/cover;
-    height: 100vh; /* Adjust the height to cover the viewport */
+    height: 70vh; /* Adjust the height to cover the viewport */
     color: #fff;
     text-align: center;
     padding: 6rem 2rem;
