--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,11 +16,13 @@ body {
   .navbar {
     background: #002147;
     color: #fff;
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
     position: sticky;
     top: 0;
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: fit-content;
+    height: fit-content;
   }
   
   .navbar .logo {
@@ -143,4 +145,8 @@ body {
     text-align: center;
     padding: 1rem 0;
     font-size: 0.9rem;
+  }
+
+  .navbar-header{
+    background-color: #002147;
   }
