--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conference on AI 2025</title>
+    <title>Conference on AI 2025 Logo</title>
     <link rel="stylesheet" href="app.component.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -11,27 +11,97 @@
     />
   </head>
   <body>
-    <div class="container">
-      <a href="#" class="logo">CAI 2025</a>
-    </div>
-    <!-- Header Navigation -->
-    <header class="navbar">
-      <div class="container">
-        <nav>
-          <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#verticals">Verticals</a></li>
-            <li><a href="#authors">Information for Authors</a></li>
-            <li><a href="#speakers">Speakers and Events</a></li>
-            <li><a href="#workshops">Workshops/Tutorials</a></li>
-            <li><a href="#workshops">Sign Up for Alerts</a></li>
-            <li><a href="#exhibitors">Exhibitors and Supporters</a></li>
-            <li><a href="#IEEEAI2024">IEEE AI Standard 2024</a></li>
-          </ul>
-        </nav>
+    <!--Header-->
+    <div class="row navbar-header">
+      <div class="col-2">
+        <a class="navbar-brand" href="#">IEEE AIStandard 2025</a>
       </div>
-    </header>
+      <div class="col-10">
+        <div class="row">
+          <ul class="nav nav-pills nav-fill justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link" href="#home">HOME</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-expanded="false"
+                >ABOUT</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >About IEEE AI Standards 2025</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Organizing Committee</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >Equality, Diversity and Inclusion Statement</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#verticals">VERTICALS</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                href="#information"
+                role="button"
+                aria-expanded="false"
+              >
+                INFORMATION FOR AUTHORS</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#">Important Dates</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Call for Papers</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Call for Workshops</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Call for Panels</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#speakers">SPEAKERS AND EVENTS</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#information"
+                  role="button"
+                  aria-expanded="false"
+                >
+                  WORKSHOPS/TUTORIALS</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Workshops Overview</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Tutorials Overview</a>
+                  </li>
+                </ul>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- </header> -->
 
     <!-- Hero Section -->
     <section id="home" class="hero">
