--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <!--Header-->
-    <div class="row navbar-header">
+    <div class="row navbar-header custom-navbar">
       <div class="col-2">
         <a class="navbar-brand" href="#">IEEE AIStandard 2025</a>
       </div>
-      <div class="col-10">
+      <div class="col-10 nav-list-content">
         <div class="row">
           <ul class="nav nav-pills nav-fill justify-content-end">
             <li class="nav-item">
