fixed navar again

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,97 +11,87 @@
     />
   </head>
   <body>
-    <!--Header-->
-    <div class="row navbar-header custom-navbar">
-      <div class="col-2">
-        <a class="navbar-brand" href="#">IEEE AIStandard 2025</a>
-      </div>
-      <div class="col-10 nav-list-content">
-        <div class="row">
-          <ul class="nav nav-pills nav-fill justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link" href="#home">HOME</a>
+      <ul class="nav nav-pills nav-fill navbar-class">
+        <li class="nav-item logo-class">
+          <a class="nav-link" href="#logo">LOGO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#home">HOME</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#"
+            role="button"
+            aria-expanded="false"
+            >ABOUT</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">About IEEE AI Standards 2025</a>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                role="button"
-                aria-expanded="false"
-                >ABOUT</a
+            <li>
+              <a class="dropdown-item" href="#">Organizing Committee</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#"
+                >Equality, Diversity and Inclusion Statement</a
               >
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >About IEEE AI Standards 2025</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Organizing Committee</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >Equality, Diversity and Inclusion Statement</a
-                  >
-                </li>
-              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#verticals">VERTICALS</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#information"
-                role="button"
-                aria-expanded="false"
-              >
-                INFORMATION FOR AUTHORS</a
-              >
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#">Important Dates</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Call for Papers</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Call for Workshops</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Call for Panels</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#speakers">SPEAKERS AND EVENTS</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  href="#information"
-                  role="button"
-                  aria-expanded="false"
-                >
-                  WORKSHOPS/TUTORIALS</a
-                >
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="#">Workshops Overview</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Tutorials Overview</a>
-                  </li>
-                </ul>
-              </li>
           </ul>
-        </div>
-      </div>
-    </div>
-    <!-- </header> -->
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#verticals">VERTICALS</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#information"
+            role="button"
+            aria-expanded="false"
+          >
+            INFORMATION FOR AUTHORS</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Important Dates</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Papers</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Workshops</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Panels</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#speakers">SPEAKERS AND EVENTS</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#information"
+            role="button"
+            aria-expanded="false"
+          >
+            WORKSHOPS/TUTORIALS</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Workshops Overview</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Tutorials Overview</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
