--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,12 +6,6 @@ body {
     color: #333;
   }
   
-  /* .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-  } */
-  
   /* Navigation Bar */
   .navbar {
     background: #002147;
@@ -28,9 +22,11 @@ body {
   }
 
   .hero {
+    /* background: linear-gradient(to bottom, rgba(0, 33, 71, 0.8), rgba(0, 33, 71, 0.5)),
+                url("../assets/images/santaclaracounty.jpg") no-repeat center center/cover; */
     background: linear-gradient(to bottom, rgba(0, 33, 71, 0.8), rgba(0, 33, 71, 0.5)),
-                url("../assets/images/landingpage.jpg") no-repeat center center/cover;
-    height: 70vh; /* Adjust the height to cover the viewport */
+                url("../assets/images/santaclaracounty.jpg") no-repeat center center/cover;
+    height: 100vh; /* Adjust the height to cover the viewport */
     color: #fff;
     text-align: center;
     padding: 6rem 2rem;
@@ -39,14 +35,23 @@ body {
     justify-content: center;
     align-items: center;
   }
-    
+
   .hero h1 {
     font-size: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .hero h2{
+    font-size: 1.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .hero .name{
+    font-size: 5rem;
   }
   
   .hero p {
-    font-size: 1.2rem;
+    font-size: 2rem;
     margin-bottom: 2rem;
   }
   
@@ -119,51 +124,6 @@ body {
     font-size: 0.9rem;
   }
 
- /* .custom-navbar{
-        height: 100px;
- } */
-
- /* .nav-list-content{ */
-    /* justify-content: center;
-    align-items: center; */
-    /* float: right !important; */
-    /* font-size: 18px;  /* Adjust this value as needed */
-    /* padding: 15px 20px; */
-    /* text-decoration: none;
-     */
- /* } */
-
- /* Make it responsive */
-/* @media screen and (max-width: 768px) {
-    .nav-bar {
-      flex-direction: column;
-    }
-    
-    .nav-bar a {
-      font-size: 16px;  /* Slightly smaller font for mobile */
-      /* padding: 10px;
-    }
-  }
-
-  .custom-navbar {
-    display: flex;
-    align-items: center; /* Vertically centers content */
-    /* justify-content: center; /* Horizontally centers content */
-    /* background-color: white; /* Optional: adjust as per your theme */
-    /* padding: 0px 80px; */
-    /* position: fixed; */
-  /* } */ 
-  
-  /* .navbar-brand {
-    font-size: 20px; /* Adjust the font size of the brand */
-    /* font-weight: bold; Optional for emphasis */
-    /* margin-right: auto; Keeps the brand aligned to the left */
-  /* } */ 
-/*   
-  .nav-list-content .nav {
-    font-size: 18px; 
-  } */
-
   .navbar-class{
         background: #002147;
         color: #fff;
@@ -187,9 +147,9 @@ body {
   }
 
   .nav-item a:hover{
-    color: bisque;
+    color: whitesmoke;
   }
   
-  /* .nav-item .dropdown-menu {
-    font-size: 16px; 
-  }  */
+  .container{
+    margin-bottom: -10rem;
+  }
