--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,102 +11,102 @@
     />
   </head>
   <body>
-    <ul class="nav nav-pills nav-fill navbar-class">
-      <li class="nav-item logo-class">
-        <a class="nav-link" href="#logo">LOGO</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#home">HOME</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          data-bs-toggle="dropdown"
-          href="#"
-          role="button"
-          aria-expanded="false"
-          >ABOUT</a
-        >
-        <ul class="dropdown-menu">
-          <li>
-            <a class="dropdown-item" href="#">About IEEE AI Standards 2025</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Organizing Committee</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"
-              >Equality, Diversity and Inclusion Statement</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#verticals">VERTICALS</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          data-bs-toggle="dropdown"
-          href="#information"
-          role="button"
-          aria-expanded="false"
-        >
-          INFORMATION FOR AUTHORS</a
-        >
-        <ul class="dropdown-menu">
-          <li>
-            <a class="dropdown-item" href="#">Important Dates</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Call for Papers</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Call for Workshops</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Call for Panels</a>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#speakers">SPEAKERS AND EVENTS</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          data-bs-toggle="dropdown"
-          href="#information"
-          role="button"
-          aria-expanded="false"
-        >
-          WORKSHOPS/TUTORIALS</a
-        >
-        <ul class="dropdown-menu">
-          <li>
-            <a class="dropdown-item" href="#">Workshops Overview</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Tutorials Overview</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
+
+      <ul class="nav nav-pills nav-fill navbar-class">
+        <li class="nav-item logo-class">
+          <a class="nav-link" href="#logo">LOGO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#home">HOME</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#"
+            role="button"
+            aria-expanded="false"
+            >ABOUT</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">About IEEE AI Standards 2025</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Organizing Committee</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#"
+                >Equality, Diversity and Inclusion Statement</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#verticals">VERTICALS</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#information"
+            role="button"
+            aria-expanded="false"
+          >
+            INFORMATION FOR AUTHORS</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Important Dates</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Papers</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Workshops</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Call for Panels</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#speakers">SPEAKERS AND EVENTS</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#information"
+            role="button"
+            aria-expanded="false"
+          >
+            WORKSHOPS/TUTORIALS</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Workshops Overview</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Tutorials Overview</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
       <div class="container">
         <h1>
           2025 IEEE International Conference on AI Standardization and Quality
-          Assurance
+          Assurance (IEEE AIStandard 2025)
         </h1>
-        <h1 class="name">IEEE AIStandard 2025</h1>
         <h2>In conjuction with IEEE CAI 2025</h2>
         <p>Santa Clara, California, USA<br />May 5–7, 2025</p>
-        <!-- <div class="cta-buttons">
+        <div class="cta-buttons">
           <a href="#" class="btn-primary">Sign Up for Alerts</a>
           <a href="#" class="btn-secondary">Learn More</a>
-        </div> -->
+        </div>
       </div>
     </section>
 
